tests/baselines/reference/addMoreOverloadsToBaseSignature.errors.txt
tests/cases/compiler/addMoreOverloadsToBaseSignature.ts(5,11): error TS2430: Interface 'Bar' incorrectly extends interface 'Foo'.
  Types of property 'f' are incompatible.
    Type '(key: string) => string' is not assignable to type '() => string'.
      The source signature requires more arguments (1) than are provided by the target (0).


==== tests/cases/compiler/addMoreOverloadsToBaseSignature.ts (1 errors) ====
    interface Foo {
        f(): string;
    }
    
    interface Bar extends Foo {
              ~~~
!!! error TS2430: Interface 'Bar' incorrectly extends interface 'Foo'.
!!! error TS2430:   Types of property 'f' are incompatible.
!!! error TS2430:     Type '(key: string) => string' is not assignable to type '() => string'.
!!! error TS2430:       The source signature requires more arguments (1) than are provided by the target (0).
        f(key: string): string;
    }
    